update job title

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="text">
         <div class="text-one">Hello,</div>
         <div class="text-two">I'm Umair</div>
-        <div class="text-three">Software Engineer | Cloud Architect</div>
+        <div class="text-three">Technical Lead | Cloud Architect</div>
         <!-- <div class="text-four">From </div> -->
       </div>
       <div class="button">
