--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </p>
           <div class="button">
             <!-- <button>Download CV</button> -->
-            <a href="cv/UmairAbid_TechLead_Resume.pdf"><button>Download CV</button></a>
+            <a href="cv/UmairAbid_SSE_Resume.pdf"><button>Download CV</button></a>
           </div>
         </div>
       </div>
